arm: dts fix phy-nodes address
BPI-R2> usb start
starting USB...
Bus usb@1a1c0000: hcd: 0x1a1c0000, ippc: 0x1a1c4700
debug: xhci_mtk_probe 248
debug: xhci_mtk_phy_setup 214
debug: xhci_mtk_phy_setup 216 ret:0
debug: xhci_mtk_phy_setup 221
debug: xhci_mtk_probe 252
u2p:1, u3p:1
debug: xhci_mtk_probe 256
debug: xhci_mtk_probe 259
Register 200010f NbrPorts 2
Starting the controller
USB XHCI 0.96
Bus usb@1a240000: hcd: 0x1a240000, ippc: 0x1a244700
debug: xhci_mtk_probe 248
debug: xhci_mtk_phy_setup 214
debug: xhci_mtk_phy_setup 216 ret:0
debug: xhci_mtk_phy_setup 221
debug: xhci_mtk_probe 252
u2p:1, u3p:1
debug: xhci_mtk_probe 256
debug: xhci_mtk_probe 259
Register 200010f NbrPorts 2
Starting the controller
USB XHCI 0.96
scanning bus usb@1a1c0000 for devices... unable to get descriptor, error 4
usb_new_device: Cannot read configuration, skipping device 13ef:1000
1 USB Device(s) found
scanning bus usb@1a240000 for devices... 1 USB Device(s) found
       scanning usb for storage devices... 0 Storage Device(s) found

--- a/arch/arm/dts/mt7623.dtsi
+++ b/arch/arm/dts/mt7623.dtsi
@@ -398,7 +398,7 @@
 	u3phy1: usb-phy1@1a1c4000 {
 		compatible = "mediatek,mt7623-tphy", "mediatek,generic-tphy-v1";
 
-		reg = <0 0x1a1c4000 0 0x0700>;
+		reg = <0x1a1c4000 0x0700>;
 		#address-cells = <1>;
 		#size-cells = <1>;
 		ranges;
@@ -433,7 +433,7 @@
 	u3phy2: usb-phy2@1a244000 {
 		compatible = "mediatek,mt7623-tphy", "mediatek,generic-tphy-v1";
 
-		reg = <0 0x1a244000 0 0x0700>;
+		reg = <0x1a244000 0x0700>;
 		#address-cells = <1>;
 		#size-cells = <1>;
 		ranges;
