--- a/configs/mt7622_rfb_32_defconfig
+++ b/configs/mt7622_rfb_32_defconfig
@@ -82,3 +82,15 @@ CONFIG_HUSH_PARSER=y
 CONFIG_DM_PWM=y
 CONFIG_PWM_MTK=y
 CONFIG_CMD_PWM=y
+
+CONFIG_DM_USB=y
+CONFIG_DM_REGULATOR=y
+CONFIG_USB=y
+CONFIG_USB_XHCI_HCD=y
+CONFIG_USB_XHCI_MTK=y
+
+#CONFIG_DM_USB_GADGET=y
+#CONFIG_USB_GADGET=y
+#CONFIG_USB_GADGET_DOWNLOAD=y
+CONFIG_CMD_USB=y
+#CONFIG_CMD_USB_MASS_STORAGE=y
