--- a/arch/arm/dts/mt7622.dtsi
+++ b/arch/arm/dts/mt7622.dtsi
@@ -81,6 +81,12 @@
 		#clock-cells = <0>;
 	};
 
+	clk25m: dummy25m {
+		compatible = "fixed-clock";
+		clock-frequency = <25000000>;
+		#clock-cells = <0>;
+	};
+
 	infracfg: infracfg@10000000 {
 		compatible = "mediatek,mt7622-infracfg",
 			     "syscon";
@@ -239,8 +245,8 @@
 		u3port0: usb-phy@1a0c4900 {
 			reg = <0x1a0c4900 0x0700>;
 			#phy-cells = <1>;
-			//clocks = <&clk25m>;
-			//clock-names = "ref";
+			clocks = <&clk25m>;
+			clock-names = "ref";
 		};
 
 		u2port1: usb-phy@1a0c5000 {
