--- a/arch/arm/dts/mt7623n-bananapi-bpi-r2.dts
+++ b/arch/arm/dts/mt7623n-bananapi-bpi-r2.dts
@@ -214,9 +214,9 @@
 	pinctrl-0 = <&pcie_default>;
 	status = "okay";
 
-	pcie@0,0 {
+/*	pcie@0,0 {
 		status = "okay";
-	};
+	}; */
 
 	pcie@1,0 {
 		status = "okay";
